--- a/public/views/pages/join.html
+++ b/public/views/pages/join.html
@@ -1,18 +1,8 @@
-<script src="js/image.js"></script>
 <div class="panel">
   <div id="expectations" class="text-content">
     <h2>Expectations</h2>
     <div marked="content['Expectations']"></div>
   </div>
-  <div class="flex">
-    <div class="text-content">
-      <h2>Applicant Requirements</h2>
-      <div marked="content['Applicant Requirements']"></div>
-    </div>
-    <div class="line"></div>
-    <div class="text-content">
-      <h2>How to Become a Full Member</h2>
-      <div marked="content['How to Become a Full Member']"></div>
-    </div>
-  </div>
+  <text-content one="'Applicant Requirements'" two="'How to Become a Full Member'" content="content">
+  </text-content>
 </div>
