Streamlined mobile line hiding

--- a/sass/mobile/main.scss
+++ b/sass/mobile/main.scss
@@ -3,10 +3,5 @@
 }
 
 div.flex > .line {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding: 0px;
-  width: 0px;
-  height: 0px;
-  background-color: white;
+  visibility: hidden;
 }
