Switched to directive for all text content

--- a/public/views/pages/about.html
+++ b/public/views/pages/about.html
@@ -6,15 +6,6 @@
       <div marked="content['About Us']"></div>
     </div>
   </div>
-  <div class="flex">
-    <div id="funding" class="text-content">
-      <h2>Funding</h2>
-      <div marked="content['Funding']"></div>
-    </div>
-    <div class="line"></div>
-    <div id="organization" class="text-content">
-      <h2>Unit Organization and Operation</h2>
-      <div marked="content['Unit Organization and Operation']"></div>
-    </div>
-  </div>
+  <text-content one="'Funding'" two="'Unit Organization and Operation'" content"content">
+  </text-content>
 </div>
