--- a/public/views/pages/class.html
+++ b/public/views/pages/class.html
@@ -4,15 +4,6 @@
     <h2>About Our Class</h2>
     <div marked="content['About Our Class']"></div>
   </div>
-  <div class="flex">
-    <div class="text-content">
-      <h2>Quick Facts</h2>
-      <div marked="content['Quick Facts']"></div>
-    </div>
-    <div class="line"></div>
-    <div class="text-content">
-      <h2>How to Register</h2>
-      <div marked="content['How to Register']"></div>
-    </div>
-  </div>
+  <text-content one="'Quick Facts'" two="'How to Register'" content="content">
+  </text-content>
 </div>
