--- a/public/views/pages/cpr.html
+++ b/public/views/pages/cpr.html
@@ -34,15 +34,6 @@
       </div>
     </div>
   </div>
-  <div class="flex">
-    <div class="text-content">
-      <h2>How to Sign Up</h2>
-      <div marked="content['How to Sign Up']"></div>
-    </div>
-    <div class="line"></div>
-    <div class="text-content">
-      <h2>Courses Offered</h2>
-      <div marked="content['Courses Offered']"></div>
-    </div>
-  </div>
+  <text-content one="'How to Sign Up'" two="'Courses Offered'" content="content">
+  </text-content>
 </div>
