--- a/public/views/pages/info.html
+++ b/public/views/pages/info.html
@@ -1,13 +1,4 @@
 <div class="panel">
-  <div class="flex">
-    <div class="text-content">
-      <h2>FAQ</h2>
-      <div marked="content['FAQ']"></div>
-    </div>
-    <div class="line"></div>
-    <div class="text-content">
-      <h2>About this Website</h2>
-      <div marked="content['Tech Facts']"></div>
-    </div>
-  </div>
+  <text-content one="'FAQ'" two="'About this Website'" content="content">
+  </text-content>
 </div>
