Fixed about page issue

--- a/public/views/pages/about.html
+++ b/public/views/pages/about.html
@@ -6,6 +6,6 @@
       <div marked="content['About Us']"></div>
     </div>
   </div>
-  <text-content one="'Funding'" two="'Unit Organization and Operation'" content"content">
+  <text-content one="'Funding'" two="'Unit Organization and Operation'" content="content">
   </text-content>
 </div>
