Made the menu slidable

--- a/public/views/partials/shift.html
+++ b/public/views/partials/shift.html
@@ -4,7 +4,7 @@
     <div class="small">{{ shift.callTime }}</div>
     <div>{{ shift.venue }}</div>
     <div>{{ shift.event }}</div>
-    <div class="small right"><span ng-if="shift.oneSlots > 0">One</span></div>
-    <div class="small right"><span ng-if="shift.twoSlots > 0">Two</span></div>
-    <div class="small right"><span ng-if="shift.volSlots > 0">Volunteer</span></div>
+    <div class="small right"><span ng-if="shift.oneSlots > 0">1</span></div>
+    <div class="small right"><span ng-if="shift.twoSlots > 0">2</span></div>
+    <div class="small right"><span ng-if="shift.volSlots > 0">V</span></div>
 </div>
