--- a/sass/globals/panel.scss
+++ b/sass/globals/panel.scss
@@ -1,3 +1,9 @@
+#panel-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 div.panel {
   padding: 10px;
   text-align: center;
