--- a/sass/globals/main.scss
+++ b/sass/globals/main.scss
@@ -1,6 +1,6 @@
 * {
   margin: 0px;
-  font-family: sans-serif;
+  font-family: open-sans;
 }
 
 .bold {
@@ -21,9 +21,15 @@ body {
 }
 
 @font-face {
-  font-family: Raleway;
-  src:url("/assets/fonts/raleway/Raleway-Regular.ttf");
+  font-family: open-sans;
+  src:url("/assets/fonts/open-sans/OpenSans-Regular.ttf");
   font-weight: normal;
+}
+
+@font-face {
+  font-family: open-sans-semibold;
+  src:url("/assets/fonts/open-sans/OpenSans-Semibold.ttf");
+  font-weight: bold;
 }
 
 div.text-content {
@@ -55,4 +61,22 @@ div.text-content > div > ol {
 
 .hidden {
  visibility: hidden;
+}
+
+h2 {
+  font-size: 4vh;
+}
+
+h3 {
+  font-size: 3vh;
+}
+
+p {
+  font-size: 2vh;
+  padding-bottom: 0.2vh;
+}
+
+pre {
+  font-size: 2vh;
+  padding: 1vh;
 }
