--- a/sass/pages/join.scss
+++ b/sass/pages/join.scss
@@ -1,18 +1,12 @@
-img#join-photo {
-  height: 400px;
-}
-
 #expectations {
   text-align: center;
   flex-grow: 1;
 }
 
-#expectations h2 {
-  font-size: 24pt;
-}
-
 #expectations p {
-  font-size: 20pt;
+  font-size: 3vh;
+  padding: 1vh;
+  font-family: open-sans-semibold;
 }
 
 #expectations div {
