--- a/public/views/partials/staff-panels.html
+++ b/public/views/partials/staff-panels.html
@@ -1,7 +1,9 @@
 <div ng-repeat="person in people" class="person-box">
   <h3>{{ person.Role }}</h3>
   <div class="person-container">
-  <div class="left"><img ng-src="{{ person.Image }}" class="human-picture"/></div>
+  <div class="left person-crop-container">
+    <img ng-src="{{ person.Image }}" class="human-picture"/>
+  </div>
   <div class="right">
     <h3>{{ person.Name }}</h3>
     <p class="bold" ng-if="person.Office_Hours_1">Office Hours</p>
