Changed image to middle row

--- a/public/views/pages/cpr.html
+++ b/public/views/pages/cpr.html
@@ -1,6 +1,5 @@
 <div class="panel">
   <div id="cpr-top" class="flex">
-    <img id="cpr-logo" src="assets/images/heart-logo.png"/>
     <div class="text-content">
       <h2>Mission CPR</h2>
       <div marked="content['Mission CPR']"></div>
@@ -27,6 +26,7 @@
         </tr>
       </table>
     </div>
+    <div><img id="cpr-logo" src="assets/images/heart-logo.png"/></div>
     <div>
       <div id="discounts">
         <h2>Discounts</h2>
