Updated to go along with simplified directive

--- a/public/views/pages/staff.html
+++ b/public/views/pages/staff.html
@@ -3,10 +3,10 @@
     <h1>Board of Directors</h1>
     <p>The Board of Directors represent the upper level leadership of UmassEMS. They are elected each calendar year and serve one year terms.</p>
   </div>
-  <staffpanels class="horizontal-container" people="directors"></staffpanels>
+  <div class="horizontal-container" staffpanels people="directors"></div>
   <div class="staff-header">
     <h1>Administrative Staff</h1>
     <p>The Administrative Staff is critical to keep UmassEMS running. These positions are appointed by the directors each academic year.</p>
   </div>
-  <staffpanels class="horizontal-container" people="staff"></staffpanels>
+  <div class="horizontal-container" staffpanels people="staff"></div>
 </div>
