--- a/sass/pages/cpr.scss
+++ b/sass/pages/cpr.scss
@@ -12,6 +12,10 @@
   display: inline-block;
 }
 
+#cpr-middle > div {
+  width: auto;
+}
+
 #cpr-costs td:nth-child(even) {
   text-align: right;
 }
