Removed references to font size from page-specific stylesheets

--- a/sass/pages/join.scss
+++ b/sass/pages/join.scss
@@ -1,11 +1,11 @@
 #expectations {
   text-align: center;
   flex-grow: 1;
+  padding: 0.5em;
 }
 
 #expectations p {
-  font-size: 3vh;
-  padding: 1vh;
+  padding: 0.25em;
   font-family: open-sans-semibold;
 }
 
