Mobile sizing tweaks

--- a/public/views/pages/cpr.html
+++ b/public/views/pages/cpr.html
@@ -1,36 +1,39 @@
 <div class="panel">
-  <div id="cpr-top" class="flex">
-    <div class="text-content">
-      <h2>Mission CPR</h2>
-      <div marked="content['Mission CPR']"></div>
-    </div>
+  <div class="text-content">
+    <h2>Mission CPR</h2>
+    <div marked="content['Mission CPR']"></div>
   </div>
-  <div id="cpr-middle" class="flex center">
+  <div id="cpr-middle" class="flex">
     <div id="costs">
-      <table id="cpr-costs">
-        <tr class="top">
-          <th>Class</th>
-          <th>Cost</th>
-        </tr>
-        <tr>
-          <td>Heart Saver CPR/AED</td>
-          <td>$50</td>
-        </tr>
-        <tr>
-          <td>Healthcare Provider</td>
-          <td>$60</td>
-        </tr>
-        <tr>
-          <td>CPR/AED with First Aid</td>
-          <td>$75</td>
-        </tr>
-      </table>
+      <div class="vertical-center">
+        <div class="vertical-spacer"></div>
+        <table id="cpr-costs">
+          <tr class="top">
+            <th>Class</th>
+            <th>Cost</th>
+          </tr>
+          <tr>
+            <td>Heart Saver CPR/AED</td>
+            <td>$50</td>
+          </tr>
+          <tr>
+            <td>Healthcare Provider</td>
+            <td>$60</td>
+          </tr>
+          <tr>
+            <td>CPR/AED with First Aid</td>
+            <td>$75</td>
+          </tr>
+        </table>
+        <div class="vertical-spacer"></div>
+      </div>
     </div>
-    <div><img id="cpr-logo" src="assets/images/heart-logo.png"/></div>
     <div>
-      <div id="discounts">
+      <div id="discounts" class="vertical-center">
         <h2>Discounts</h2>
+        <div class="vertical-spacer"></div>
         <div marked="content['Discounts']"></div>
+        <div class="vertical-spacer"></div>
       </div>
     </div>
   </div>
