--- a/public/views/partials/staff-panels.html
+++ b/public/views/partials/staff-panels.html
@@ -1,6 +1,6 @@
 <div ng-repeat="person in people" class="person-box">
   <h3>{{ person.Role }}</h3>
-  <div class="person-container" ng-class="($parent.$parent.mobile)?'mobile':''">
+  <div class="person-container">
   <div>
     <div class="left person-crop-container">
       <img ng-src="{{ person.Image }}" class="human-picture"/>
