--- a/public/views/partials/shift.html
+++ b/public/views/partials/shift.html
@@ -1,10 +1,10 @@
 <div ng-repeat="shift in shifts" class="shift-box">
-    <div class="small">{{ shift.dateString }}</div>
-    <div class="small">{{ shift.day }}</div>
-    <div class="small">{{ shift.callTime }}</div>
-    <div>{{ shift.venue }}</div>
-    <div>{{ shift.event }}</div>
-    <div class="small right"><span ng-if="shift.oneSlots > 0">1</span></div>
-    <div class="small right"><span ng-if="shift.twoSlots > 0">2</span></div>
-    <div class="small right"><span ng-if="shift.volSlots > 0">V</span></div>
+    <div class="small big-text">{{ shift.dateString }}</div>
+    <div class="small big-text">{{ shift.day }}</div>
+    <div class="small big-text">{{ shift.callTime }}</div>
+    <div class="big-text">{{ shift.venue }}</div>
+    <div class="big-text">{{ shift.event }}</div>
+    <div class="small right big-text"><span ng-if="shift.oneSlots > 0">1</span></div>
+    <div class="small right big-text"><span ng-if="shift.twoSlots > 0">2</span></div>
+    <div class="small right big-text"><span ng-if="shift.volSlots > 0">V</span></div>
 </div>
