--- a/sass/pages/shifts.scss
+++ b/sass/pages/shifts.scss
@@ -9,6 +9,10 @@ div.shift-box {
   text-align: left;
 }
 
+div.director-pick > div.shift-box {
+  background-color: #FFD700;
+}
+
 div.shift-box > div {
   margin: 5px;
   display: block;
