Made CPR page look passable

--- a/public/views/pages/cpr.html
+++ b/public/views/pages/cpr.html
@@ -3,7 +3,7 @@
     <h2>Mission CPR</h2>
     <div marked="content['Mission CPR']"></div>
   </div>
-  <div>
+  <div id="cpr-link">
     <a target="_blank" href="https://docs.google.com/a/umass.edu/document/d/1zgC0nnr583IqrUxRD_HqFlqZuvTWw44Pf_hXba7LUZk/edit?usp=sharing">
       Click to view current schedule
     </a>
