--- a/sass/globals/main.scss
+++ b/sass/globals/main.scss
@@ -1,6 +1,6 @@
 * {
   margin: 0px;
-  font-family: open-sans;
+  font-family: sans-serif;
 }
 
 .bold {
@@ -18,18 +18,6 @@ body {
     padding: 0px;
     text-align: center;
     color: black;
-}
-
-@font-face {
-  font-family: open-sans;
-  src:url("/assets/fonts/open-sans/OpenSans-Regular.ttf");
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: open-sans-semibold;
-  src:url("/assets/fonts/open-sans/OpenSans-Semibold.ttf");
-  font-weight: bold;
 }
 
 div.text-content {
