--- a/public/views/partials/shift.html
+++ b/public/views/partials/shift.html
@@ -4,8 +4,12 @@
     <div class="small big-text">{{ shift.callTime }}</div>
     <div class="big-text">{{ shift.venue }}</div>
     <div class="big-text">{{ shift.event }}</div>
-    <div class="big-text bold" ng-if="shift.directorPick">Director Pick</div>
-    <div class="small right big-text"><span ng-if="shift.oneSlots > 0">1</span></div>
-    <div class="small right big-text"><span ng-if="shift.twoSlots > 0">2</span></div>
-    <div class="small right big-text"><span ng-if="shift.volSlots > 0">V</span></div>
+    <div ng-if="shift.directorPick">
+      <div class="big-text bold">Director Pick</div>
+    </div>
+    <div class="shift-slot-box">
+      <div class="big-text"><span ng-if="shift.oneSlots > 0">1</span></div>
+      <div class="big-text"><span ng-if="shift.twoSlots > 0">2</span></div>
+      <div class="big-text"><span ng-if="shift.volSlots > 0">V</span></div>
+    </div>
 </div>
