Added shifts spreadsheet link

--- a/public/views/pages/shifts.html
+++ b/public/views/pages/shifts.html
@@ -1,5 +1,6 @@
 <div class="panel" ng-controller="ShiftController">
   <h1>Shifts</h1>
+  <a class="big-text" href="https://docs.google.com/spreadsheets/d/189rTX1Y5b_CAmvBcBXo2NZeNAxCil0vG5-nHHa69r0o">Click for Complete Shift Spreadsheet</a>
   <p class="big-text">Select the type of shift you want by clicking the buttons below</p>
   <div id="filter-panel">
     <div id="role">
