--- a/sass/pages/join.scss
+++ b/sass/pages/join.scss
@@ -1,12 +1,16 @@
 #expectations {
   text-align: center;
   flex-grow: 1;
-  padding: 0.5em;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 #expectations p {
   padding: 0.25em;
-  font-family: open-sans-semibold;
+  font-family: Sans-serif;
+  font-size: 18pt;
 }
 
 #expectations div {
